--- a/Style_Final.css
+++ b/Style_Final.css
@@ -1,9 +1,9 @@
 /* 一定要做的設定 */
-*{
+* {
     /* 讓畫面上的所有元素以邊框計算大小 */
     box-sizing: border-box;
     /* 設定完成後再註解起來 */
-    /* border: 1px solid black; */
+    /* border: 1px solid black;  */
     /* 只要內容放不下就換行 */
     flex-wrap: wrap;
 }
@@ -18,9 +18,8 @@
     flex: none;
     font-size: 20px;
     font-weight: bold;
-    align-items: center;
-    text-align: center;
     justify-content: center;
+    line-height: 35px;
 }
 
 .nav_right {
@@ -35,10 +34,8 @@
     font-size: 20px;
     flex: none;
     margin-right: 10px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
     display: block;
+    line-height: 35px;
 }
 
 /* 漢堡包 */
@@ -48,27 +45,29 @@
 
 /* 主標題 */
 
-header{
-    background-color: #CCEFFF;color:rgb(0, 0, 0);font-weight:bold;font-size:40px;
-    text-align:center; padding: 80px;
+header {
+    background-color: #CCEFFF;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
     height: 300px;
+    line-height: 300px;
 }
 
 /* 主內容設定 */
 
-main{
-    display: flex; flex-wrap: wrap;
+main {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
-main>.card{
-    flex: none;
-
-}
 
 .container_card {
     width: 1200px;
     margin: 0 auto;
+    margin-top: 10px;
 
 }
 
@@ -76,25 +75,35 @@ main>.card{
 
 .promote_container {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-content: flex-start;
-    background-color: #CCEFFF;
+    padding: 5px;
+
 
 }
 
-.promote {
+.promote1 {
     display: flex;
     width: 50%;
-    font-size: 20px;
     align-items: center;
+    height: 50px;
+    background-color: #CCEFFF;
+    border-right: 5px solid white;
+
 
 }
+
+.promote2 {
+    display: flex;
+    width: 50%;
+    align-items: center;
+    height: 50px;
+    background-color: #CCEFFF;
+    border-left: 5px solid white;
+}
+
 
 .promote_image {
     width: 80px;
     height: 100%;
-    height: 50px;
     justify-content: left;
 
 }
@@ -142,9 +151,16 @@ main>.card{
 
     .promote_container {
         flex-wrap: wrap;
+        justify-content: center;
     }
 
-    .promote {
+    .promote1 {
+
+        width: 45%;
+    }
+
+    .promote2 {
+
         width: 45%;
     }
 
@@ -162,6 +178,22 @@ main>.card{
 
 /* 螢幕解析度小於600px */
 @media (max-width:600px) {
+
+    .promote_container {
+        flex-wrap: wrap;
+
+    }
+
+    .promote1 {
+        width: 90%;
+        border-right: 5px solid #CCEFFF;
+        margin: 10px;
+    }
+
+    .promote2 {
+        width: 90%;
+        border-left: 0px;
+    }
 
     .photo_body {
         width: 90%;
